--- a/samples/text_stroke_test/css/sample5-decoration.css
+++ b/samples/text_stroke_test/css/sample5-decoration.css
@@ -1,9 +1,6 @@
 @charset "utf-8";
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap");
-@font-face {
-  font-family: Noto Sans JP Bold;
-  src: url("fonts/NotoSansJP-Bold.otf");
-}
+@import url("https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Noto+Sans+JP:wght@300;400;500;700&display=swap");
+
 * {
   box-sizing: border-box;
 }
@@ -41,8 +38,8 @@ p {
 /* 袋文字 */
 h3 {
   font-size: 38Q;
-  font-family: "Noto Sans JP Bold";
-  font-weight: 700;
+  font-family: "Dela Gothic One";
+  font-weight: 400;
   line-height: 1.5em;
   letter-spacing: 0.25em;
   color: rgba(255, 255, 255, 0);
